stringa inserita nel dom

--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
 </head>
 
 <body>
+
+
+  <div id="array-team"></div>
+  
+  <h1>Our team</h1>
+  <div id="member-container">
+   
+  </div>
+
+
+
   
 
   <!-- script js -->
