--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
   
       <div id="member-cards">
 
-        <div class="card" style="width: 18rem;">
+        <ul class="card">
+          <li class="item">item1</li>
+          <li class="item">item2</li>
+          <li class="item">item3</li>
+        </ul>
+
+
+
+
+
+        <!-- <div class="card" style="width: 18rem;">
           <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
             <ul class="list-group list-group-flush">
@@ -30,7 +40,7 @@
               <li class="list-group-item">A third item</li>
             </ul>
           </div>
-        </div>
+        </div> -->
 
       </div>
   
