--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <!-- css -->
   <link rel="stylesheet" href="css/style.css">
 
@@ -21,26 +19,11 @@
   
       <div id="member-cards">
 
-        <ul class="card">
+        <!-- <ul class="card">
           <li class="item">item1</li>
           <li class="item">item2</li>
           <li class="item">item3</li>
-        </ul>
-
-
-
-
-
-        <!-- <div class="card" style="width: 18rem;">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">An item</li>
-              <li class="list-group-item">A second item</li>
-              <li class="list-group-item">A third item</li>
-            </ul>
-          </div>
-        </div> -->
+        </ul> -->
 
       </div>
   
@@ -48,10 +31,6 @@
   </main>
   
 
-
-
-  <!-- script bootstrap -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   <!-- script js -->
   <script type="text/javascript" src="js/main.js"></script>
 
